# sqlx_bug_demo

./: Cargo.toml
src/: main.rs
