[package]
name = "sqlx_bug_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "sqlite"] } 
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["full"] }
